Clean up unused transport model warnings